HUB-456 fix svg legend icon on mobile

--- a/app/assets/stylesheets/_layers.scss
+++ b/app/assets/stylesheets/_layers.scss
@@ -52,9 +52,9 @@
 }
 .layer-qct_qda {
   background-color: #ffffff;
-  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' height='20'><path fill='none' stroke-width='16' stroke='%230D465C' d='M0,1 L50,1' stroke-linecap='square'/></svg>");
+  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'><path fill='none' stroke='%230D465C' stroke-width='6' d='M0.5,3 L20.5,3' stroke-linecap='square'/></svg>");
 }
 .layer-qnmc_qda {
   background-color: #ffffff;
-  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' height='20'><path fill='none' stroke-width='16' stroke='%23BA233F' d='M0,1 L50,1' stroke-linecap='square'/></svg>");
+  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'><path fill='none' stroke='%23BA233F' stroke-width='6' d='M0.5,3 L20.5,3' stroke-linecap='square'/></svg>");
 }
